Attempt to fix background on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,19 +5,6 @@
   padding: 0.2em 0;
 }
 body {
-
-  /* padding: 0;
-  background: #000 url("/images/Hestia_dark.jpg") !important;
-  background-repeat: no-repeat !important;
-  background-position: 0% 0% !important;
-  background-attachment: fixed !important;
-  background-color: black !important;
-  background-size: cover !important;
-  -webkit-background-size: cover !important;
-  -moz-background-size: cover !important;
-  -o-background-size: cover !important;
-  z-index: 1;
-  font-family: Didot !important; */
   padding: 0;
   background-color: black !important;
   z-index: 1;
@@ -36,8 +23,6 @@ body::before {
   background-size: cover;
   will-change: transform;
   z-index: -1;
-  -webkit-transition: all 0.3s linear;
-  transition: all 0.3s linear;
 }
 h1, h2, h3, h4 {
   color: white;
